client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-rate-limiting-example-client
spec:
  replicas: 5
  selector:
    matchLabels:
      app: grpc-rate-limiting-example-client
  template:
    metadata:
      labels:
        app: grpc-rate-limiting-example-client
    spec:
      containers:
      - name: grpc-rate-limiting-example-client
        image: serhatcetinkaya/grpc-demo-client:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 50005
        args: ["-h", "envoy-proxy.default.svc.cluster.local","-p","10000"]
