eds-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eds-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: eds-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eds-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: eds-service
    spec:
      containers:
      - name: eds-service
        image: serhatcetinkaya/envoy-discovery-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
