envoy-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-proxy
spec:
  ports:
  - name: grpc
    port: 10000
  selector:
    app: envoy-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-proxy
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: envoy-proxy
    spec:
      containers:
      - name: envoy-proxy
        image: envoyproxy/envoy:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 10000
        volumeMounts:
          - name: envoy-config-volume
            mountPath: /etc/envoy
      volumes:
        - configMap:
            defaultMode: 0644
            name: envoy-config
          name: envoy-config-volume
